--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/userSpring
-spring.datasource.username=root
-spring.datasource.password=123
+spring.jpa.generate-ddl=true
+
+spring.datasource1.url=jdbc:mysql://localhost:3306/userSpring
+spring.datasource1.username=root
+spring.datasource1.password=123
+
+spring.datasource2.url=jdbc:mysql://localhost:3306/addressSpring
+spring.datasource2.username=root
+spring.datasource2.password=123
