--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.assertj/assertj-core
 	testCompile group: 'org.assertj', name: 'assertj-core', version: '3.16.1'
 	
+	// https://mvnrepository.com/artifact/javax.validation/validation-api
+	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+	
 }
 
 test { 	
