--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
-spring.datasource1.url=jdbc:mysql://localhost:3306/userSpring
+spring.datasource1.url=jdbc:mysql://mysql:3306/userSpring
 spring.datasource1.username=root
 spring.datasource1.password=123
 
-spring.datasource2.url=jdbc:mysql://localhost:3306/addressSpring
+spring.datasource2.url=jdbc:mysql://mysql:3306/addressSpring
 spring.datasource2.username=root
 spring.datasource2.password=123
